--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <img class="rightpic1" src="logo_polytech.jpg">
+            <img class="rightpic1" src="logo_polytech.jpg" alt="rightpic1">
             <div class="container">
                 <ul class="navig">
                     <li class="li-navig"><a href="#about">Обо мне</a></li>
@@ -36,7 +36,8 @@
                 <p>Как бы самовлюбленно это не звучало, 
                     я обладаю широким спектром полезных навыков. 
                     Самые выдающиеся из них:</p>
-                <ul><img class="rightpic2" src="pero_ludi_mozg.jpg">
+                <img class="rightpic2" src="pero_ludi_mozg.jpg" alt="rightpic2">
+                <ul>
                     <li>Копирайтинг</li>
                     <li>Тимбилдинг</li>
                     <li>Критическое мышление</li>
